--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,12 @@
 markdown: rdiscount
 auto: true
-url: http://bbaget.com/blog
+# url: http://bbaget.com/blog
+url: 
 exclude: ["README.md", "LICENSE.md", "TODO.md", "build", "test", "templates"]
 # keywords: ["villa in france", "cottage in france", "cottage", "villa", "france", "gite", "pool", "dordogne", "self catering", "holiday", "family", "kids", "quality", "value", "flexible", "full kitchen", "towels", "bed linen", "perigord noir", "gites", "le bugue", "sarlat", "perigueux", "shooping", "markets", "history", "world heritage sites", "pre-historic", "caves", "chateaux", "medieval towns", "bastides", "peaceful", "canoeing", "golf", "bikes", "walking", "aquarium", "fine wines", "bordeaux", "bergerac", "wonderful food", "foie gras", "duck", "truffles"]
 
 owner-name: Grant Neale
-owner-page: http://bbaget.com/blog
+# owner-page: http://bbaget.com/blog
 owner-email: gneale@mac.com
 owner-site: Bbaget
 
@@ -18,7 +19,8 @@ regeneration: true
 lsi: true
 exclude: README.textile Rakefile
 tag_title_prefix: 'Tag: '
-base_url: http://bbaget.com/blog
+# base_url: http://bbaget.com/blog
+base_url:
 title: Bbaget - France and other stuff
 # post_types:
 #   - portfolio
